syntax = "proto3";
option go_package = "../backend";

package backend;

message DescribeUserListRequest{
  int64 pageNum = 1;
  int64 pageSize = 2;
}

message User{
  string name = 1;
}

message DescribeUserListResponse{
  repeated User userList = 1;
}

//protoc --go_out=. --go_opt=paths=source_relative  --go-grpc_out=. --go-grpc_opt=paths=source_relative srv.proto
//protoc --go_out=. --go_opt=paths=source_relative  --go-grpc_out=. --go-grpc_opt=paths=source_relative srv.proto